--- a/app/views/international-arrivals/v4/people-confirmed.html
+++ b/app/views/international-arrivals/v4/people-confirmed.html
@@ -28,13 +28,13 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can order travel packages for other people that you're travelling with. They must have the same delivery address as you.<br><br>
+        You can order travel test packages for other people that you're travelling with. They must have the same delivery address as you.<br><br>
         In England, Wales and Northern Ireland, children aged 4 and under do not need to take a day 2 or day 8 test.<br><br>
         In Scotland, children aged 10 and under do not need to take a day 2 or day 8 test.<br><br>
         Once you've confirmed who needs testing, you can complete and pay for your order.
       </p>
 
-      <table class="govuk-table govuk-!-margin-bottom-0">
+      <!-- <table class="govuk-table govuk-!-margin-bottom-0">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Name</th>
@@ -49,9 +49,6 @@
             <th scope="row" class="govuk-table__header" style="border-bottom: none">{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</th>
             <td class="govuk-table__cell" style="border-bottom: none">
               {{ data['date-of-birth-day'] or '2' }}/{{ data['date-of-birth-month'] or '03' }}/{{ data['date-of-birth-year'] or '1979' }}
-              <!-- {{ data['email-address'] or 'email@example.com' }}
-              <br>
-              {{ data['mobile-phone-number'] or '+447782808451' }} -->
             </td>
             <td class="govuk-table__cell" style="border-bottom: none">
               {{ data['travel-route'] or 'Day 2 and day 8 tests' }}
@@ -92,9 +89,9 @@
             </td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
 
-      <!-- <div class="info-summary">
+      <div class="info-summary">
         <div>
           <p class="govuk-body">
             <strong>{{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Appleseed' }}</strong><br>
@@ -125,7 +122,7 @@
             {% else %}
             6 December 1976
             {% endif %}<br>
-            {{ data['travel-route'] or 'Day 2 and day 8 tests' }}<br>
+            {{ data['travel-route'] or 'Day 2 and day 8 test' }}<br>
             {% if data['travel-route'] == 'Day 2 test' %}
             £68
             {% else %}
@@ -137,7 +134,7 @@
         <p class="govuk-body-m"><strong class="govuk-!-padding-right-4">Amount to pay</strong> 
           {% if data['travel-route'] == 'Day 2 test' %}£68{% else %}£116{% endif %}
         </p>
-      </div> -->
+      </div>
 
       <div class="inline-buttons-wrapper govuk-!-margin-top-8">
         <form class="form" action="/international-arrivals/{{version}}/delivery-address" method="post">
