--- a/app/views/antigen/v2/refer-and-triage/mobile-number.html
+++ b/app/views/antigen/v2/refer-and-triage/mobile-number.html
@@ -1,5 +1,5 @@
-{% set version = "v2" %}
-{% set pageTitle = "Mobile number" %}
+{% set version = "v1" %}
+{% set pageTitle = "Do you have a mobile number where you can get the test results?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-  {% include "includes/gtm-noscript.html" %}
+{% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -33,46 +33,37 @@
                 {{ pageTitle }}
               </h1>
             </legend>
-            <div id="mobile-number-hint">
-              <p class="govuk-body">We need a mobile number to send your test results.</p>
-
-              <p class="govuk-body">If the test is for someone else, make sure they're happy for their test results to go to this number.</p>
-
-              <p class="govuk-body">If you're getting a test for a child, enter your number not theirs.</p>
-
-              <p class="govuk-body">If your mobile number is going to change soon, it's important you give us an email address, to make sure you get your test results.</p>
-            </div>
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-               Do you have a mobile number where you can get the test results?
-             </legend>
+            <span id="mobile-number-hint" class="govuk-body">
+              If you're getting a test for a child, you (their parent or guardian) should enter your number. If you're getting a test for someone aged 16 or older, make sure they're happy for their test results to go to this number.
+            </span>
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="mobile-number-1" name="mobile-number" type="radio" value="Yes" data-aria-controls="conditional-mobile-number" {{ checked("mobile-number", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="mobile-number-1">
-                  Yes
+                  Yes, I have a mobile phone number where I can get the results
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-mobile-number">
+                <div id="event-name-hint" class="govuk-hint">
+                  Make sure you’re happy for your test results to go to this mobile number
+                </div>
                 <div class="govuk-form-group">
-                  <label class="govuk-label" for="mobile-number">
+                  <label class="govuk-label" for="mobile-phone-number">
                     Mobile number
                   </label>
-                  <div id="telephone-number-hint" class="govuk-hint">
-                    For international numbers include the country code (Eg,+33)
-                  </div>
-                  <input class="govuk-input govuk-input--width-20" id="mobile-number" name="mobile-number" type="tel" value="{{ data['mobile-phone-number'] }}">
+                  <input class="govuk-input govuk-!-width-one-third" id="mobile-phone-number" name="mobile-phone-number" type="tel" value="{{ data['mobile-phone-number'] }}">
                 </div>
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="confirm-mobile-phone-number">
                     Confirm mobile number
                   </label>
-                  <input class="govuk-input govuk-input--width-20" id="confirm-mobile-phone-number" name="mobile-number" type="tel" value="{{ data['confirm-mobile-phone-number'] }}">
+                  <input class="govuk-input govuk-!-width-one-third" id="confirm-mobile-phone-number" name="confirm-mobile-phone-number" type="tel" value="{{ data['confirm-mobile-phone-number'] }}">
                 </div>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="mobile-number-2" name="mobile-number" type="radio" value="No" {{ checked("mobile-number", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="mobile-number-2">
-                  No
+                  No, I do not have a mobile phone number
                 </label>
               </div>
             </div>
@@ -80,15 +71,10 @@
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
+
       </form>
-    </div>
 
-    <div class="proto-action big">
-      <a href="/antigen/{{version}}/refer-and-triage/mobile-number-option-2">
-        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
-      </a>
     </div>
-
   </div>
 
 {% endblock %}
