--- a/app/views/antigen/v2/global-registration/email-address.html
+++ b/app/views/antigen/v2/global-registration/email-address.html
@@ -1,5 +1,5 @@
-{% set version = "v2" %}
-{% set pageTitle = "Email address" %}
+{% set version = "v1" %}
+{% set pageTitle = "Does the person needing a test have an email address?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block content %}
-  {% include "includes/gtm-noscript.html" %}
+{% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -32,36 +32,32 @@
                 {{ pageTitle }}
               </h1>
             </legend>
-
-            <div id="email-address-hint">
-              <p class="govuk-body">We need an email address to send the test results. Use one they'll have access to later.</p>
-
-              <p class="govuk-body">If the test is for someone else, make sure they're happy for their test results to go to this email.</p>
-
-              <p class="govuk-body">If they're getting a test for a child, enter their email not the child's.</p>
-
-              <p class="govuk-body">If their mobile number is going to change soon, it's important to give us an email address, as it may be the only way to get the test results.</p>
-
-              <!--p class="govuk-body">If a test result is positive, the NHS may also use the details you supply for <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/test-results/help-the-nhs-alert-your-close-contacts-if-you-test-positive/" target="_blank">contact tracing (opens in new tab)</a>.</p-->
-            </div>
-
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-             What's {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }} 's email address?
-             </legend>
-
-                <div class="govuk-form-group govuk-!-margin-top-6">
+            <span id="mobile-number-hint" class="govuk-body">
+                If you have one, we’ll email your test site pass and test results to you. You can print this out or bring a copy of it on your mobile phone.
+            </span>
+            <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="email-1" name="email" type="radio" value="Yes" data-aria-controls="conditional-email-address" {{ checked("email", "Yes") }}>
+                <label class="govuk-label govuk-radios__label" for="email-1">
+                  Yes, I have an email address
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-email-address">
+                <div class="govuk-form-group">
                   <label class="govuk-label" for="email-address">
+                    Make sure you’re happy for the test results to go to this email address. Do not use a work or shared email address unless you’re comfortable with others seeing your results.<br><br>
                     Email address
                   </label>
-                  <input class="govuk-input govuk-!-width-two-thirds" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}">
+                  <input class="govuk-input" id="email-address" name="email-address" type="text" value="{{ data['email-address'] }}" aria-describedby="conditional-email-address-hint">
                 </div>
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="confirm-email-address">
-                    Confirm email address
-                  </label>
-                  <input class="govuk-input govuk-!-width-two-thirds" id="confirm-email-address" name="confirm-email-address" type="text" value="{{ data['confirm-email-address'] }}">
-                </div>
-
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="email-2" name="email" type="radio" value="I do not have an email address" {{ checked("email", "I do not have an email address") }}>
+                <label class="govuk-label govuk-radios__label" for="email-2">
+                  No, I don’t have an email address
+                </label>
+              </div>
+            </div>
           </fieldset>
         </div>
 
