--- a/app/views/antigen/v2/refer-and-triage/email-address.html
+++ b/app/views/antigen/v2/refer-and-triage/email-address.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Do you have an email address where you can get the test results?" %}
+{% set pageTitle = "Email address" %}
 
 {% extends "includes/layout.html" %}
 
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block content %}
-{% include "includes/gtm-noscript.html" %}
+  {% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -32,15 +32,25 @@
                 {{ pageTitle }}
               </h1>
             </legend>
-            <span id="email-address-hint" class="govuk-body">
-              You need an email address to order a home test kit online. Email is also the quickest way to get your test results.<br><br>
-              If you’re getting a test for a child, you (their parent or guardian) should enter your email. If you’re getting a test for someone aged 16 or older, make sure they’re happy for their test results to go to this email.
-            </span>
+            <div id="email-address-hint">
+              <p class="govuk-body">We need an email address to send your test results. Use one you'll have access to later.</p>
+
+              <p class="govuk-body">If the test is for someone else, make sure they're happy for their test results to go to this email.</p>
+
+              <p class="govuk-body">If you're getting a test for a child, enter your email not theirs.</p>
+
+              <p class="govuk-body">If your mobile number is going to change soon, it's important you give us an email address, as it's the only way to get your test results.</p>
+
+              <!--p class="govuk-body">If a test result is positive, the NHS may also use the details you supply for <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/test-results/help-the-nhs-alert-your-close-contacts-if-you-test-positive/" target="_blank">contact tracing (opens in new tab)</a>.</p-->
+            </div>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+               Do you have an email address where you can get the test results?
+             </legend>
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="email-1" name="email" type="radio" value="Yes" data-aria-controls="conditional-email-address" {{ checked("email", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="email-1">
-                  Yes, I have an email address where I can get the results
+                  Yes
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-email-address">
@@ -58,28 +68,25 @@
                 </div>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="email-2" name="email" type="radio" value="I do not have an email address" data-aria-controls="conditional-no-email-address" {{ checked("email", "I do not have an email address") }}>
+                <input class="govuk-radios__input" id="email-2" name="email" type="radio" value="I do not have an email address" data-aria-controls="conditional-email-address-2" {{ checked("email", "I do not have an email address") }}>
                 <label class="govuk-label govuk-radios__label" for="email-2">
-                  No, I don’t have an email address
+                  No
                 </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-no-email-address">
-                <!-- <div class="govuk-form-group">
-                  <label class="govuk-label" for="email-address">
-                    If you do not provide an email address, you can book a test for a test site or call the contact centre to order a home test kit. Call 119 if you're in England, Wales or Northern Ireland. Call 0300 303 2713 if you're in Scotland. Lines are open from 7am to 11pm.
-                  </label>
-                </div> -->
-                <p>If you do not provide an email address, you can book a test for a test site or call the contact centre to order a home test kit. Call 119 if you're in England, Wales or Northern Ireland. Call 0300 303 2713 if you're in Scotland. Lines are open from 7am to 11pm.</p>
               </div>
             </div>
           </fieldset>
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
-
       </form>
-
     </div>
+
+    <div class="proto-action big">
+      <a href="/antigen/{{version}}/refer-and-triage/email-address-option-2">
+        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+      </a>
+    </div>
+
   </div>
 
 {% endblock %}
