--- a/app/views/antigen/v2/govuk/get-coronavirus-test.html
+++ b/app/views/antigen/v2/govuk/get-coronavirus-test.html
@@ -318,7 +318,7 @@
                             <strong style="text-decoration: underline; color: #ffffff" class="govuk-!-margin-right-2">
                                 Coronavirus (COVID‑19)
                             </strong>
-                            <span class="govuk-!-margin-right-2" style="color: #ffffff">|</span><span style="color: #ffffff">Guidance and support</span>
+                            <span class="govuk-!-margin-right-2" style="color: #ffffff">|</span><span style="color: #ffffff">Latest updates and guidance</span>
                         </p>
                     </div>
                  </div>
@@ -354,7 +354,7 @@
                     <ul class="govuk-list govuk-list--bullet">
                       <li>a high temperature</li>
                       <li>a new, continuous cough</li>
-                      <li>you’ve lost your sense of smell or taste or it’s changed</li>
+                      <li>you’ve lost your sense of smell or taste or they’ve changed</li>
                     </ul>
 
                     <p class="govuk-body">
@@ -365,18 +365,18 @@
                       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                       <strong class="govuk-warning-text__text govuk-!-font-size-19">
                         <span class="govuk-warning-text__assistive">Warning</span>
-                        If you have symptoms, <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">self-isolate</a> straight away until you get your results. Do not leave home, except to post a test kit or for a PCR test appointment. <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">Check if the people you live with need to self-isolate on NHS.UK.</a>
+                        If you have symptoms, <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">self-isolate</a> straight away until you get your results. Do not leave home, except to post a test kit or for a PCR test appointment. <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">Check if the people you live with need to self-isolate on the NHS website.</a>
                       </strong>
                     </div>
 
                     <p class="govuk-body">
-                      You should not use this service if you’ve received a positive PCR test result in the last 90 days, unless you develop any new symptoms.
+                      You should not use this service if you’ve received a positive PCR test result in the last 90 days, unless you get any new COVID-19 symptoms.
                     </p>
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">Getting a PCR test if you have no symptoms</h2>
                     <p class="govuk-body">You can also use this service if:</p>
                     <ul class="govuk-list govuk-list--bullet">
-                      <li>ou’ve been in contact with someone who’s tested positive and you must <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">self-isolate</a></li>
+                      <li>you’ve been in contact with someone who’s tested positive and you must <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">self-isolate</a></li>
                       <li>you need to get a test for someone you live with who has symptoms</li>
                       <li>you’ve been asked to get a test by a local council or someone from NHS Test and Trace</li>
                       <li>a GP or other health professional has asked you to get a test</li>
@@ -401,7 +401,7 @@
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Getting a rapid lateral flow test if you have no symptoms</h2>
                     <p class="govuk-body">
                       If you have no symptoms and are not eligible for a PCR test for other reasons, you can  <a class="govuk-link" href="../../../lfd-home-ordering/v1/order-home-test.html">order rapid lateral flow tests to be sent to your home</a><br><br>
-                      If you’re not sure about different test types, you can <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/get-tested-for-coronavirus/" class="govuk-link">find out which COVID-19 test you should get</a>.
+                      If you’re not sure about different test types, you can <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/testing/get-tested-for-coronavirus/" class="govuk-link">find out which COVID-19 test you should get on the NHS website</a>.
                     </p>
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">If you’re going into hospital</h2>
