--- a/app/views/index.html
+++ b/app/views/index.html
@@ -441,14 +441,16 @@
             <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
               <div style="display: flex;">
 
-          <div class="govuk-grid-column-one-third">
+          <div class="govuk-grid-column-two-third">
             <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
             <h3 class="govuk-heading-s">V4</h3>
-            <p class="govuk-body">RM barcode updates</p>
-            <p class="govuk-body-s">Live service on 06 Jan 2022</p>
+            <p class="govuk-body">Live service on 7 Jan 2022</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>
-                <a href="/antigen/v6/home-testing/">Register Home Test Kit - Full Journey</a>
+                <a class="govuk-link--no-visited-state" href="/antigen/v6/home-testing/">Register Home Test Kit (includes RM barcode updates)</a>
+              </li>
+              <li>
+                <a href="/antigen/v6/refer-and-triage/guard-question">Refer and triage (includes interim follow-up guidance)</a>
               </li>
             </ul>
           </div>
@@ -677,7 +679,7 @@
           <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
             <div style="display: flex;">
                 <div class="govuk-grid-column-one-third">
-                  <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong>
+                  <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
                   <h3 class="govuk-heading-s">V1</h3>
                   <p class="govuk-body">Updated on 11 June 2021</p>
                   <ul class="govuk-list govuk-list--bullet">
@@ -688,17 +690,11 @@
                 </div>
                 <div class="govuk-grid-column-one-third">
                   <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong>
-                  <h3 class="govuk-heading-s">Start Page Update</h3>
+                  <h3 class="govuk-heading-s">V2</h3>
+                  <p class="govuk-body">Updated on 11 January 2022</p>
                   <ul class="govuk-list govuk-list--bullet">
                     <li>
-                      <a href="/lfd-collection-registration/v3/">Start page - v3</a>
-                    </li>
-                  </ul>
-                  <ul class="govuk-list govuk-list--bullet">
-                    <h4>Deprecated</h4>
-                    <strong class="govuk-tag govuk-tag--red govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">On hold</strong>
-                    <li>
-                      <a href="/lfd-collection-registration/v2/">Start page - v2</a>
+                      <a href="/lfd-collection-registration/v3/">Start page</a>
                     </li>
                   </ul>
                 </div>
