--- a/app/views/antigen/v7/global-registration/landline-number.html
+++ b/app/views/antigen/v7/global-registration/landline-number.html
@@ -26,7 +26,7 @@
 
       <!-- <form action="/antigen/{{version}}/action3/landline-number" method="post"> -->
         <!--form action="/antigen/{{version}}/global-registration/email-address" method="post"-->
-        <form method="post" action="/antigen/{{version}}/global-registration/email-address-home" method="post">
+        <form method="post" action="/antigen/{{version}}/global-registration/email-address-home">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="landline-number-hint">
